Revision history for Mojolicious-Plugin-BootstrapHelpers

{{$NEXT}}

0.003  2014-08-31 11:21:10 CEST
    - Removed unnecessary dependency
    - Much improved tests (with Test::Mojo::Trim)

0.002  2014-08-30 22:50:05 CEST
    - First public release.

0.001  2014-08-30 22:47:03 CEST
    - Initial release